--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,55 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+
+    <form class="search-form" id="search-form">
+      <input class="search-input"
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Что ищем?"
+      />
+      <button type="submit" class="search-submit">Поиск</button>
+    </form>
+
+
+    <div class="gallery">
+      <!-- Карточки изображений -->
+    </div>
+
+
+    <!-- <button
+    type="button"
+    class="btn btn-primary button"
+    data-action="load-more"
+  >
+    <span
+      class="spinner-border spinner-border-sm spinner is-hidden"
+      role="status"
+      aria-hidden="true"
+    ></span>
+
+    <span class="label">Search more</span>
+  </button> -->
+
+    <script src="index.js" type="module"></script>
   </body>
 </html>
+
+
+
+
+<!-- <button
+  type="button"
+  class="btn btn-primary button"
+  data-action="load-more"
+>
+  <span
+    class="spinner-border spinner-border-sm spinner is-hidden"
+    role="status"
+    aria-hidden="true"
+  ></span>
+
+  
+  <span class="label">Показать ещё</span>
+</button>  -->
