--- a/src/index.html
+++ b/src/index.html
@@ -1,63 +1,19 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homework 11</title>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-
     <form class="search-form" id="search-form">
-      <input class="search-input"
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Что ищем?"
-      />
-      <button type="submit" class="search-submit">Поиск</button>
+      <input class="search-input" type="text" name="searchQuery" autocomplete="off" placeholder="Чого бажаешь?" />
+      <button type="submit" class="search-submit">Пошук</button>
     </form>
-
-
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
-
-
-    <!-- <button
-    type="button"
-    class="btn btn-primary button"
-    data-action="load-more"
-  >
-    <span
-      class="spinner-border spinner-border-sm spinner is-hidden"
-      role="status"
-      aria-hidden="true"
-    ></span>
-
-    <span class="label">Search more</span>
-  </button> -->
-
     <script src="index.js" type="module"></script>
   </body>
 </html>
-
-
-
-
-<!-- <button
-  type="button"
-  class="btn btn-primary button"
-  data-action="load-more"
->
-  <span
-    class="spinner-border spinner-border-sm spinner is-hidden"
-    role="status"
-    aria-hidden="true"
-  ></span>
-
-  
-  <span class="label">Показать ещё</span>
-</button>  -->
