--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
+    <div id="tui-pagination-container" class="tui-pagination"></div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
