--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./sass/index.scss" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>team-project</team-project></title>
+    <title>Homework 11</title>
   </head>
   <body>
     <form class="search-form" id="search-form">
@@ -14,7 +14,6 @@
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
-    <div id="tui-pagination-container" class="tui-pagination"></div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
