--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./sass/index.scss" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 11</title>
+    <title>Page title</title>
+    <link rel="stylesheet" href="./sass/index.scss" />
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input class="search-input" type="text" name="searchQuery" autocomplete="off" placeholder="Чого бажаешь?" />
-      <button type="submit" class="search-submit">Пошук</button>
-    </form>
-    <div class="gallery">
-      <!-- Карточки изображений -->
-    </div>
-    <script src="index.js" type="module"></script>
+    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/example.html"></include>
   </body>
 </html>
